# diligent-learner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: utils.py
src/notebooks/: test.ipynb
